fixed alignment

--- a/css/bootstrap-grid.css
+++ b/css/bootstrap-grid.css
@@ -39,6 +39,7 @@ a{
 
 #contact-bar h4 {
     margin: 8px auto;
+    font-size: .7em;
 }
 
 @media screen and (min-width: 768px) {
@@ -47,6 +48,9 @@ a{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
+    }
+    #contact-bar h4{
+        font-size: inherit;
     }
 }
 
